[gd_scene load_steps=20 format=3 uid="uid://b5ewyjy3hrv5s"]

[ext_resource type="Script" path="res://scripts/dagger_selector.gd" id="1_rq4wc"]
[ext_resource type="Texture2D" uid="uid://bpjhtlwa0w1yh" path="res://assets/environment/plants/bush.png" id="2_jlfxj"]
[ext_resource type="Shader" uid="uid://6e7nm3qmc3go" path="res://shaders/simple_shader.tres" id="3_y8fqf"]
[ext_resource type="Texture2D" uid="uid://bam7nu32ov4c8" path="res://assets/enemy/soft circle.PNG" id="4_mdsj1"]
[ext_resource type="Texture2D" uid="uid://qmx1pi0utiv8" path="res://assets/prototype-circle.png" id="5_eurbv"]
[ext_resource type="Theme" uid="uid://bcj62soh77ubu" path="res://themes/default.tres" id="6_wktrf"]
[ext_resource type="Texture2D" uid="uid://caghsbwdav723" path="res://assets/ui/trophy.png" id="7_2xr8q"]
[ext_resource type="Texture2D" uid="uid://cqn3dp00kcutg" path="res://assets/ui/arrow 1dir.png" id="8_nviu8"]
[ext_resource type="Texture2D" uid="uid://dis2qjediwrrv" path="res://assets/ui/return.png" id="9_ce0l5"]
[ext_resource type="Texture2D" uid="uid://bu52a4qc5m8vf" path="res://assets/daggers/RustBlade.png" id="10_dl7ei"]
[ext_resource type="Texture2D" uid="uid://gyk8ph73wfat" path="res://assets/daggers/KitchenKnife.png" id="10_pto2s"]
[ext_resource type="Texture2D" uid="uid://camtmcddaovcp" path="res://assets/ui/locked.png" id="17_qqva8"]
[ext_resource type="FontFile" uid="uid://c6tjq1nrukid5" path="res://assets/fonts/Rye-Regular.ttf" id="18_4xtdk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2wb3s"]
shader = ExtResource("3_y8fqf")
shader_parameter/Hit_Texture = ExtResource("4_mdsj1")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cftu7"]
shader = ExtResource("3_y8fqf")
shader_parameter/Hit_Texture = ExtResource("4_mdsj1")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4d21"]
bg_color = Color(1, 0.933333, 0, 0.239216)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0.929412, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g753f"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0.929412, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_laj2e"]
bg_color = Color(1, 1, 1, 0.239216)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkdlt"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 10.0

[node name="Dagger Selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rq4wc")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(4.18136e-07, 0.200231, 0.00401538, 1)

[node name="Bush" type="TextureRect" parent="."]
modulate = Color(6.85863e-07, 0.329533, 0.00801974, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jlfxj")
stretch_mode = 6

[node name="Total Orbs" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 40.0
offset_right = 50.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Total Orbs"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2

[node name="Prototype-circle" type="Sprite2D" parent="Total Orbs/TextureRect"]
material = SubResource("ShaderMaterial_2wb3s")
position = Vector2(-19, 25)
scale = Vector2(0.45, 0.45)
texture = ExtResource("5_eurbv")

[node name="Total Orbs" type="Label" parent="Total Orbs"]
layout_mode = 2
offset_left = 9.0
offset_top = 3.0
offset_right = 33.0
offset_bottom = 50.0
theme = ExtResource("6_wktrf")
theme_override_font_sizes/font_size = 34
text = "0"

[node name="High Score" type="HFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -43.0
offset_top = 40.0
offset_right = -19.0
offset_bottom = 87.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="High Score"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2

[node name="Prototype-circle2" type="Sprite2D" parent="High Score/TextureRect"]
modulate = Color(1, 1, 1, 0.627451)
material = SubResource("ShaderMaterial_2wb3s")
position = Vector2(-34, 20)
scale = Vector2(0.43, 0.43)
texture = ExtResource("5_eurbv")

[node name="Prototype-circle" type="Sprite2D" parent="High Score/TextureRect"]
position = Vector2(-34, 25)
scale = Vector2(0.45, 0.45)
texture = ExtResource("7_2xr8q")

[node name="High Score" type="Label" parent="High Score"]
layout_mode = 2
theme = ExtResource("6_wktrf")
theme_override_font_sizes/font_size = 34
text = "0"

[node name="Right Button" type="Button" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("6_wktrf")
icon = ExtResource("8_nviu8")

[node name="Left Button" type="Button" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 78.0
offset_top = -39.0
offset_right = 156.0
offset_bottom = 39.0
grow_vertical = 2
scale = Vector2(-1, 1)
theme = ExtResource("6_wktrf")
icon = ExtResource("8_nviu8")

[node name="Return Button" type="Button" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -134.0
offset_right = 85.0
offset_bottom = -56.0
grow_vertical = 0
scale = Vector2(1.6, 1.6)
theme = ExtResource("6_wktrf")
icon = ExtResource("9_ce0l5")

[node name="KitchenKnife Dagger" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(0, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -155.0
offset_right = 64.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dagger" type="TextureRect" parent="KitchenKnife Dagger"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -166.0
offset_right = 256.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(256, 256)
texture = ExtResource("10_pto2s")

[node name="Name" type="Label" parent="KitchenKnife Dagger"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = -138.0
offset_right = 248.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_wktrf")
theme_override_font_sizes/font_size = 70
text = "Kitchen Knife"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="KitchenKnife Dagger"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.0
offset_top = 175.0
offset_right = 235.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_wktrf")
text = "Just a normal dagger"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RustBlade Dagger" type="Control" parent="."]
custom_minimum_size = Vector2(0, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -155.0
offset_right = 64.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dagger" type="TextureRect" parent="RustBlade Dagger"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -166.0
offset_right = 256.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(256, 256)
texture = ExtResource("10_dl7ei")

[node name="Name" type="Label" parent="RustBlade Dagger"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = -138.0
offset_right = 248.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_wktrf")
theme_override_font_sizes/font_size = 70
text = "Kitchen Knife"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="RustBlade Dagger"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.0
offset_top = 175.0
offset_right = 235.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_wktrf")
text = "The rust has made it fragile
Can break when ricocheting off walls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Locked" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.498039)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lock" type="TextureRect" parent="Locked"]
modulate = Color(0.758192, 0.758192, 0.758192, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("17_qqva8")
expand_mode = 5

[node name="Orb" type="TextureRect" parent="Locked"]
modulate = Color(1, 1, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 169.0
offset_top = 270.0
offset_right = 169.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2

[node name="Prototype-circle" type="Sprite2D" parent="Locked/Orb"]
material = SubResource("ShaderMaterial_cftu7")
scale = Vector2(0.45, 0.45)
texture = ExtResource("5_eurbv")

[node name="Orb2" type="TextureRect" parent="Locked"]
modulate = Color(1, 1, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = 267.0
offset_right = -177.0
offset_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2

[node name="Prototype-circle" type="Sprite2D" parent="Locked/Orb2"]
material = SubResource("ShaderMaterial_cftu7")
scale = Vector2(0.45, 0.45)
texture = ExtResource("5_eurbv")

[node name="Buy Button" type="Button" parent="Locked"]
self_modulate = Color(1, 0.941176, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = 226.0
offset_right = 228.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("18_4xtdk")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxFlat_o4d21")
theme_override_styles/hover = SubResource("StyleBoxFlat_o4d21")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o4d21")
theme_override_styles/normal = SubResource("StyleBoxFlat_g753f")
text = "5000"

[node name="Select Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 226.0
offset_right = 113.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("18_4xtdk")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxFlat_laj2e")
theme_override_styles/hover = SubResource("StyleBoxFlat_laj2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_laj2e")
theme_override_styles/normal = SubResource("StyleBoxFlat_xkdlt")
text = "SELECT"
alignment = 0

[node name="Selected" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.5
offset_top = 230.0
offset_right = 261.5
offset_bottom = 319.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_wktrf")
theme_override_font_sizes/font_size = 45
text = "Selected"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="button_up" from="Right Button" to="." method="_on_right_button_button_up"]
[connection signal="button_up" from="Left Button" to="." method="_on_left_button_button_up"]
[connection signal="button_up" from="Return Button" to="." method="_on_return_button_button_up"]
[connection signal="button_up" from="Locked/Buy Button" to="." method="_on_buy_button_button_up"]
[connection signal="button_up" from="Select Button" to="." method="_on_select_button_button_up"]
